Update and rename 2024-10-07-gyul6.md to 2024-10-07-gyul7.md

--- a/_posts/2024-10-07-gyul7.md
+++ b/_posts/2024-10-07-gyul7.md
@@ -1,5 +1,5 @@
 ---
-title:  "10월/ 1. 트랜스포머에 대해서 공부하기 "
+title:  "10월/ 1. 트랜스포머에 대해서(2) "
 categories:
   - study
 tags:
@@ -16,6 +16,7 @@ tags:
 </ul>
 -------------------------------------------------------------------   
 
+이전 포스트에서는 논문에 집중해서 
 # <a id="section1"></a>1. 트랜스포머
 
 ## 1-1. 트랜스포머의 등장 배경
