Update and rename 2024-10-07-gyul67.md to 2024-10-07-gyul6.md

--- a/_posts/2024-10-07-gyul6.md
+++ b/_posts/2024-10-07-gyul6.md
@@ -1,5 +1,5 @@
 ---
-title:  "10월/ 2.  Attention Is All You Need 논문 읽기  "
+title:  "10월/ 1. 트랜스포머 공부하기(1) - Attention Is All You Need 논문 읽기  "
 categories:
   - study
 tags:
